# gleaph

./: .gitignore  AGENT.md  AGENTS.md  Cargo.toml  README.md  icp.yaml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
crates/cli/: Cargo.toml  README.md
crates/cli/src/: canister.rs  lib.rs  main.rs
crates/gleaph/: Cargo.toml
crates/gleaph/src/: auth.rs  lib.rs  prepared.rs  service.rs
crates/gql/: Cargo.toml  LICENSE-MIT  README.md
crates/gql-executor/: Cargo.toml  README.md
crates/gql-executor/src/: aggregates.rs  exec_utils.rs  graph_ops.rs  lib.rs
crates/gql-executor/tests/: canister_property_search_stack.rs
crates/gql-extension-integration/: Cargo.toml
crates/gql-extension-integration/src/: lib.rs
crates/gql-ic/: Cargo.toml
crates/gql-ic/src/: graph_registry.rs  lib.rs  plan_result_wire.rs  unique_key.rs  wire.rs
crates/gql-integration/: Cargo.toml
crates/gql-integration/src/: lib.rs  path_extension.rs  typed_batch.rs  weight.rs
crates/gql-planner/: .gitignore  CLAUDE.md  Cargo.toml
crates/gql-planner/benches/: planner_bench.rs
crates/gql-planner/src/: anchor.rs  binding_layout.rs  cost.rs  cse.rs  executor_contract.rs  explain.rs  expr_alias.rs  expr_children.rs  join_order.rs  lib.rs  output_schema.rs  path_extensions.rs  plan.rs  planner.rs  property_projection.rs  pushdown.rs  semantic.rs  stats.rs  variable_refs.rs  wire.rs
crates/gql-planner/tests/: plan_wire_roundtrip.rs  planner_tests.rs
crates/gql/src/: ast.rs  error.rs  extensions.rs  format.rs  lexer.rs  lib.rs  name_limits.rs  numeric_ops.rs  numeric_order.rs  parser.rs  program_modification.rs  rkyv_support.rs  temporal.rs  token.rs  type_check.rs  types.rs  validate.rs  value.rs  value_cmp.rs  value_index_key.rs  value_join_hash.rs  vendor_extension.rs
crates/gql/tests/: format_tests.rs  grammar_coverage_test.rs  invalid_input_tests.rs  parser_tests.rs  sample_tests.rs  section_tests_harness.rs  type_check_tests.rs
crates/graph/: Cargo.toml  DATA_PLANE_SHARDING.md  FEDERATION.md  STABLE_MEMORY_LAYOUT.md  canbench.yml  canbench_results.yml
crates/graph-catalog/: Cargo.toml  canbench.yml  canbench_results.yml
crates/graph-catalog/src/: bench.rs  lib.rs
crates/graph-index/: Cargo.toml  canbench.yml  canbench_results.yml
crates/graph-index/src/: bench.rs  canister.rs  edge_key.rs  facade.rs  guards.rs  init.rs  key.rs  label_key.rs  label_range.rs  lib.rs  posting_range.rs  state.rs
crates/graph-kernel/: Cargo.toml  canbench.yml  canbench_results.yml
crates/graph-kernel/src/: bench.rs  bidirectional_catalog.rs  edge_inline_value_profile_store.rs  edge_payload_profile_store.rs  entry.rs  error.rs  federation.rs  gql_dialect.rs  ids.rs  index.rs  lib.rs  path.rs  plan_exec.rs  records.rs  scoped_name_catalog.rs  stable_layout.rs  stable_memory.rs  traits.rs  vector_index.rs
crates/graph-pma/: Cargo.toml
crates/graph-pma/benches/: property_search_hot_path.rs
crates/graph-pma/src/: bench_profile.rs  byte_compare.rs  canbench_scope.rs  facade.rs  integration.rs  lib.rs  observability.rs  property_index.rs  property_store.rs  stable.rs
crates/graph-pma/tests/: ic_stable_dgap_bridge.rs  ic_stable_vcsr_bridge.rs
crates/graph-prepared/: Cargo.toml
crates/graph-prepared/src/: lib.rs
crates/graph-registry/: Cargo.toml  STABLE_MEMORY_LAYOUT.md  build.rs
crates/graph-registry/src/: lib.rs  registry_store.rs
crates/graph-registry/tests/: provisioning_e2e.rs
crates/graph-store/: Cargo.toml
crates/graph-store/benches/: property_search_hot_path.rs
crates/graph-store/src/: adjacency.rs  canbench_scope.rs  facade.rs  instruction_budget.rs  integration.rs  lib.rs  maintenance_dirty.rs  observability.rs  property_store.rs
crates/graph-store/tests/: ic_stable_dgap_bridge.rs
crates/graph-vector-index/: Cargo.toml  canbench.yml  canbench_results.yml
crates/graph-vector-index/src/: bench.rs  canister.rs  facade.rs  guards.rs  init.rs  lib.rs  records.rs  state.rs
crates/graph/.cargo/: config.toml  wasm.toml
crates/graph/src/: auth.rs  canister.rs  canister_host.rs  catalog.rs  edge_inline_value_scalar_codec.rs  edge_inline_value_schema.rs  edge_payload_scalar_codec.rs  edge_payload_schema.rs  edge_properties.rs  element_id_encoding.rs  facade.rs  federation.rs  gql_execution_context.rs  index.rs  (+23 more)
crates/ic-stable-csr/: Cargo.toml
crates/ic-stable-csr-canbench/: Cargo.toml  README.md  canbench.yml  canbench_results.yml
crates/ic-stable-dgap/: Cargo.toml
crates/ic-stable-lara/: Cargo.toml  README.md  canbench.yml  canbench_results.yml
crates/ic-stable-paged-ordered-map/: Cargo.toml  canbench.yml  canbench_results.yml
crates/pocket-ic-tests/: Cargo.toml  README.md  build.rs
crates/provision/: Cargo.toml  provision.did
crates/router/: Cargo.toml  canbench.yml  canbench_results.yml
crates/social-demo-gateway/: Cargo.toml  social_demo_gateway.did
gleaph-old/: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  canbench.yml  canbench_results.yml  icp.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
gleaph-old/design/: architecture-ja.md  architecture.md  category-d-d3-graph-type-schema.md  category-d-s4-parenthesized-paths.md  category-d-v4-static-type-system.md  conditional-index-scan.md  edge-id-regression-investigation.md  edge-identity-and-physical-key.md  future-roadmap.md  gleaph-extensions.md  gleaph-redesign-low-level-data-structures.md  gleaph-redesign-mutation-and-log-api.md  gleaph-redesign-principles.md  gleaph-redesign-query-execution-kernel.md  gql-conformance-matrix-ja.md  gql-specification-ja.md  gql-specification.md  gql-standard-deviations.md  gql_type_inference_design.md  gql_type_inference_gleaph_application.md  mutation-continuation-adr.md  planner-extensions.md  prepared-statements-v2.md  query-evaluation-research-notes.md  roaring-bitmap-adoption.md
gleaph-old/docs/: README-JA.md  gql-parameter-type-inference-plan.md
gleaph-old/tests/: Cargo.toml  README.md
gleaph-old/tmp-plan/: gql-deviations-triage.md  gql-standard-deviations-summary.md  internal-ordered-source-optimization.md
(+1421 files in other folders)
