[workspace]
members = [
    "crates/gql",
    "crates/gql-ic",
    "crates/gql-macros",
    "crates/gql-planner",
    "crates/graph",
    "crates/graph-catalog",
    "crates/graph-kernel",
    "crates/ic-stable-lara",
    "crates/ic-stable-paged-ordered-map",
    "crates/ic-stable-vec-deque",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT or Apache-2.0"

[workspace.dependencies]
gleaph-gql = { path = "crates/gql" }
gleaph-gql-ic = { path = "crates/gql-ic" }
gleaph-gql-planner = { path = "crates/gql-planner" }
gleaph-graph-catalog = { path = "crates/graph-catalog" }
gleaph-graph-kernel = { path = "crates/graph-kernel" }
ic-stable-lara = { path = "crates/ic-stable-lara" }
ic-stable-paged-ordered-map = { path = "crates/ic-stable-paged-ordered-map" }
ic-stable-vec-deque = { path = "crates/ic-stable-vec-deque" }

bitflags = "2.11.1"
ic-stable-structures = "0.7.2"
nohash-hasher = "0.2"
canbench-rs = "0.5"
candid = "0.10"
concat-string = "1"
ethnum = "1.5.3"
f256 = "0.11"
half = "2"
ic-cdk = "0.20"
ic-cdk-macros = "0.20"
ic-stable-roaring = { path = "../ic-stable-roaring" }
rapidhash = "4"
rkyv = "0.8.16"
roaring = "0.11.4"
rust_decimal = "1.42"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
