[workspace]
members = [
    "crates/auth",
    "crates/gql-keywords",
    "crates/gql",
    "crates/gql-ic",
    "crates/gql-macros",
    "crates/gql-planner",
    "crates/graph",
    "crates/graph-catalog",
    "crates/graph-index",
    "crates/graph-kernel",
    "crates/router",
    "crates/graph-prepared",
    "crates/ic-stable-lara",
    "crates/ic-stable-paged-ordered-map",
    "crates/ic-stable-vec-deque",
    "crates/pocket-ic-tests",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT or Apache-2.0"

[workspace.dependencies]
gleaph-auth = { path = "crates/auth" }
gleaph-gql = { path = "crates/gql" }
gleaph-gql-keywords = { path = "crates/gql-keywords" }
gleaph-gql-ic = { path = "crates/gql-ic" }
gleaph-gql-planner = { path = "crates/gql-planner" }
gleaph-graph-catalog = { path = "crates/graph-catalog" }
gleaph-graph-index = { path = "crates/graph-index" }
gleaph-graph-kernel = { path = "crates/graph-kernel" }
gleaph-router = { path = "crates/router" }
gleaph-graph-prepared = { path = "crates/graph-prepared" }
ic-stable-lara = { path = "crates/ic-stable-lara" }
ic-stable-paged-ordered-map = { path = "crates/ic-stable-paged-ordered-map" }
ic-stable-vec-deque = { path = "crates/ic-stable-vec-deque" }

bitflags = "2.13.0"
canbench-rs = "0.6"
candid = "0.10"
concat-string = "1"
ethnum = "1.5.3"
f256 = "0.11"
half = "2"
ic-cdk = "0.20"
ic-cdk-management-canister = "0.1.1"
ic-cdk-macros = "0.20"
ic-cdk-timers = "1.0"
ic-stable-roaring = { path = "../ic-stable-roaring" }
ic-stable-structures = "0.7.2"
nohash-hasher = "0.2"
num-bigint = "0.4"
num-traits = "0.2"
rapidhash = "4"
rkyv = "0.8.16"
roaring = "0.11.4"
rust_decimal = "1.42"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
