[package]
name = "gleaph-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
description = "CLI to generate TypeScript, JavaScript, and Rust clients for Gleaph prepared queries"

[[bin]]
name = "gleaph-codegen"
path = "src/main.rs"

[dependencies]
anyhow = "1"
candid.workspace = true
clap = { version = "4", features = ["derive"] }
gleaph-graph = { path = "../graph" }
ic-agent = "0.47"
serde = { workspace = true }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
gleaph-gql = { path = "../gql" }
