[package]
name = "gleaph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gleaph-gql = { path = "../gql" }
gleaph-gql-planner = { path = "../gql-planner" }
gleaph-gql-executor = { path = "../gql-executor" }
gleaph-graph-kernel = { path = "../graph-kernel" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
gleaph-graph-mem = { path = "../graph-mem" }
serde_json = "1"
