[package]
name = "gleaph-gql-ic"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Internet Computer types as gleaph-gql Value::Extension (Candid Principal, etc.)"

[dependencies]
gleaph-gql = { path = "../gql", features = [
    "ast-rkyv-no-span",
    "f128",
    "f256",
] }
candid.workspace = true
ic-stable-structures.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
rkyv.workspace = true
