[package]
name = "gleaph-gql-planner"
edition = "2024"
version = "0.0.1"
authors = ["Inomoto Yota <yota@perforate.org>"]
license = "MIT OR Apache-2.0"
rust-version = "1.88"

[dependencies]
gleaph-gql = { path = "../gql", features = ["gleaph"] }
gleaph-graph-kernel.workspace = true
rapidhash = "4"
rkyv = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[features]
default = ["plan-wire"]
plan-wire = [
    "dep:rkyv",
    "dep:thiserror",
    "gleaph-gql/ast-rkyv-no-span",
    "gleaph-gql/f128",
    "gleaph-gql/f256",
]
cypher = ["gleaph-gql/cypher"]
sql-compat = ["gleaph-gql/sql-compat"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "planner_bench"
harness = false
