[package]
name = "gleaph-gql"
edition = "2024"
version = "0.0.1"
authors = ["Inomoto Yota <yota@perforate.org>"]
license = "MIT OR Apache-2.0"
rust-version = "1.88"

include = [
    "/src",
    "/Cargo.toml",
    "/README.md",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
]

[dependencies]
gleaph-gql-keywords = { path = "../gql-keywords" }
gleaph-gql-macros = { path = "../gql-macros" }
ethnum = "1"
f256 = { workspace = true, optional = true }
half.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
rapidhash = "4"
rust_decimal = "1"
thiserror = "2"
rkyv = { workspace = true, optional = true }

[features]
default = ["f128", "f256"]
ast-rkyv-no-span = ["dep:rkyv"]
cypher = []
sql-compat = []
f128 = []
f256 = ["dep:f256"]
