[package]
name = "gleaph-graph-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
too_many_arguments = "allow"

[features]
default = []
canbench = ["dep:canbench-rs", "dep:gleaph-gql"]

[dependencies]
candid.workspace = true
gleaph-graph-kernel.workspace = true
gleaph-gql = { workspace = true, optional = true }
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true

canbench-rs = { workspace = true, optional = true }

[dev-dependencies]
gleaph-gql.workspace = true
gleaph-gql-ic.workspace = true
