[package]
name = "gleaph-graph-vector-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
too_many_arguments = "allow"

[features]
default = []
canbench = ["dep:canbench-rs"]

[dependencies]
candid.workspace = true
gleaph-graph-kernel.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true

canbench-rs = { workspace = true, optional = true }
