[package]
name = "gleaph-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
canbench = ["dep:canbench-rs"]

[dependencies]
async-trait = "0.1"
bitflags.workspace = true
candid.workspace = true
derive_more = { version = "2", features = ["display", "from", "into"] }
gleaph-auth.workspace = true
gleaph-gql = { workspace = true, features = ["f128", "f256"] }
gleaph-gql-ic.workspace = true
gleaph-gql-planner.workspace = true
gleaph-graph-prepared.workspace = true
gleaph-graph-kernel.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-stable-lara.workspace = true
ic-stable-structures.workspace = true
nohash-hasher.workspace = true
pollster = "0.4"
rapidhash.workspace = true
serde = { workspace = true, features = ["derive"] }

## canbench
canbench-rs = { workspace = true, optional = true }

[dev-dependencies]
ethnum.workspace = true
f256.workspace = true
half.workspace = true
