[package]
name = "gleaph-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["gql-parse", "plan-wire"]
gql-parse = []
plan-wire = ["gleaph-gql-planner/plan-wire"]
canbench = ["dep:canbench-rs"]
# Extra-large query-call benchmarks. These build larger synthetic graphs before each
# benchmark, so keep them out of the default canbench set.
canbench_large = ["canbench"]
# Enables `bench_scope` inside `ic-stable-lara` (labeled CSR). Do not use for native
# `cargo test`: `ic-stable-lara/canbench` pulls `candid` and triggers `ic0` in unit tests.
# Use only for WASM canprof / canbench runs: `--features canbench,canbench_lara`.
canbench_lara = ["canbench", "ic-stable-lara/canbench"]
sql-compat = ["gleaph-gql/sql-compat", "gleaph-gql-planner/sql-compat"]

[dependencies]
async-trait = "0.1"
bitflags.workspace = true
candid.workspace = true
derive_more = { version = "2", features = ["display", "from", "into"] }
gleaph-gql = { workspace = true, features = ["f128", "f256"] }
gleaph-gql-ic.workspace = true
gleaph-gql-planner = { workspace = true, features = ["plan-wire"] }
gleaph-graph-prepared.workspace = true
gleaph-graph-kernel.workspace = true
half.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-stable-lara.workspace = true
ic-stable-structures.workspace = true
nohash-hasher.workspace = true
pollster = "0.4"
rapidhash.workspace = true
serde = { workspace = true, features = ["derive"] }

## canbench
canbench-rs = { workspace = true, optional = true }

[dev-dependencies]
ethnum.workspace = true
f256.workspace = true
half.workspace = true
