[package]
name = "gleaph-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

# Query executor and GQL runtime paths intentionally thread many plan-local parameters;
# splitting them would obscure the physical-plan contract at execution boundaries.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["gql-parse", "plan-wire"]
gql-parse = []
plan-wire = ["gleaph-gql-planner/plan-wire"]
canbench = ["dep:canbench-rs"]
canbench_uniform_4 = ["canbench"]
canbench_uniform_8 = ["canbench"]
canbench_uniform_16 = ["canbench"]
canbench_uniform_32 = ["canbench"]
canbench_standard_manager = ["canbench"]
# Extra-large query-call benchmarks. These build larger synthetic graphs before each
# benchmark, so keep them out of the default canbench set.
canbench_large = ["canbench"]
# Enables `bench_scope` inside `ic-stable-lara` (labeled CSR). Do not use for native
# `cargo test`: `ic-stable-lara/canbench` pulls `candid` and triggers `ic0` in unit tests.
# Use only for WASM canprof / canbench runs: `--features canbench,canbench_lara`.
canbench_lara = ["canbench", "ic-stable-lara/canbench"]
sql-compat = ["gleaph-gql/sql-compat", "gleaph-gql-planner/sql-compat"]
# Cypher-dialect GQL extensions (list index/slice, STARTS/ENDS WITH, CONTAINS,
# NODES/EDGES/LABELS, VALUE/EXISTS subqueries, ...). Disabled in the default
# canister build: the router parses incoming GQL without cypher, so these
# constructs never reach the graph shard. Kept behind a feature so the executor
# support can be re-enabled without rewriting it.
cypher = [
    "gleaph-gql/cypher",
    "gleaph-gql-planner/cypher",
    "gleaph-gql-extension-integration/cypher",
]
# Test-only canister methods for PocketIC multi-canister E2E (not enabled in release benches).
pocket-ic-e2e = []

[dependencies]
async-trait = "0.1"
bitflags.workspace = true
candid.workspace = true
derive_more = { version = "2", features = ["display", "from", "into"] }
gleaph-gql = { workspace = true, features = ["f128", "f256"] }
gleaph-gql-ic.workspace = true
gleaph-gql-planner = { workspace = true, features = ["plan-wire"] }
gleaph-graph-prepared.workspace = true
gleaph-graph-kernel.workspace = true
gleaph-gql-extension-integration.workspace = true
half.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
ic-stable-lara.workspace = true
ic-stable-roaring.workspace = true
ic-stable-structures.workspace = true
ic-stable-variable-memory-manager.workspace = true
jiff.workspace = true
nohash-hasher.workspace = true
pollster.workspace = true
rapidhash.workspace = true
serde = { workspace = true, features = ["derive"] }

## canbench
canbench-rs = { workspace = true, optional = true }

[dev-dependencies]
ethnum.workspace = true
f256.workspace = true
half.workspace = true
