[package]
name = "ic-stable-csr-canbench"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid.workspace = true
canbench-rs.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-stable-csr = { path = "../ic-stable-csr", features = ["canbench-rs"] }
ic-stable-slot-map = { path = "../ic-stable-slot-map" }
ic-stable-structures.workspace = true
