[package]
name = "ic-stable-csr"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
canbench-rs = ["dep:canbench-rs"]
# Full dense-order `base_slot_start` monotonicity scan before `remove_slab` binary search (O(n) reads per remove).
strict-dgap-invariants = []

[dependencies]
canbench-rs = { workspace = true, optional = true }
ic-stable-slot-map.workspace = true
ic-stable-structures.workspace = true
ic-stable-vec-deque.workspace = true
