[package]
name = "ic-stable-dgap"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = { version = "2", features = ["display", "from", "into"] }
ic-cdk.workspace = true
ic-stable-roaring.workspace = true
ic-stable-structures.workspace = true
ic-stable-vec-deque.workspace = true
