[package]
name = "ic-stable-lara"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
canbench = ["dep:canbench-rs", "dep:candid"]
# Optional multiplicative headroom when growing label-bucket descriptor span on segment rewrite.
# Default is 1.25× (ceil). `bucket_row_grow_150` selects 1.5×; `bucket_row_grow_double` selects
# historical 2×. If both optional features are enabled, `bucket_row_grow_double` wins.
bucket_row_grow_150 = []
bucket_row_grow_double = []

[dependencies]
canbench-rs = { workspace = true, optional = true }
candid = { workspace = true, optional = true }
derive_more = { version = "2", features = ["display", "from", "into"] }
ic-cdk.workspace = true
ic-stable-paged-ordered-map.workspace = true
ic-stable-roaring.workspace = true
ic-stable-structures.workspace = true
ic-stable-vec-deque.workspace = true
