[package]
name = "gleaph-pocket-ic-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[test]]
name = "router_placement"
path = "tests/router_placement.rs"
harness = true

[[test]]
name = "graph_seed_dispatch"
path = "tests/graph_seed_dispatch.rs"
harness = true

[[test]]
name = "router_gql_query"
path = "tests/router_gql_query.rs"
harness = true

[dependencies]
candid.workspace = true
gleaph-gql = { workspace = true }
gleaph-gql-planner = { path = "../gql-planner", features = ["plan-wire"] }
gleaph-gql-ic.workspace = true
gleaph-graph-kernel.workspace = true
gleaph-router = { path = "../router" }
pocket-ic = "14.0.0"
serde.workspace = true

[build-dependencies]
cargo_metadata = "0.23"
flate2 = "1"
ureq = { version = "3", default-features = false, features = ["rustls"] }
