[package]
name = "gleaph-pocket-ic-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[test]]
name = "graph_seed_dispatch"
path = "tests/graph_seed_dispatch.rs"
harness = true

[[test]]
name = "smoke"
path = "tests/smoke.rs"
harness = true

[[test]]
name = "router_gql_query"
path = "tests/router_gql_query.rs"
harness = true

[[test]]
name = "router_graph_type_catalog"
path = "tests/router_graph_type_catalog.rs"
harness = true

[[test]]
name = "router_graph_resolution"
path = "tests/router_graph_resolution.rs"
harness = true

[[test]]
name = "router_index_cluster_isolation"
path = "tests/router_index_cluster_isolation.rs"
harness = true

[[test]]
name = "router_element_id_encoding"
path = "tests/router_element_id_encoding.rs"
harness = true

[[test]]
name = "adr0031_vector_index_catalog"
path = "tests/adr0031_vector_index_catalog.rs"
harness = true

[[test]]
name = "adr0034_non_leading_search_join"
path = "tests/adr0034_non_leading_search_join.rs"
harness = true

[dependencies]
candid.workspace = true
gleaph-gql = { workspace = true }
gleaph-gql-planner = { path = "../gql-planner", features = ["plan-wire"] }
gleaph-gql-ic.workspace = true
gleaph-graph-kernel.workspace = true
gleaph-router = { path = "../router" }
gleaph-social-demo-gateway = { path = "../social-demo-gateway" }
pocket-ic = "15.0.0"
serde.workspace = true
serde_json = "1"

[build-dependencies]
cargo_metadata = "0.23"
flate2 = "1"
ureq = { version = "3", default-features = false, features = ["rustls"] }

[[test]]
name = "social_graph_demo"
path = "tests/social_graph_demo.rs"
harness = true
