[package]
name = "gleaph-router"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid.workspace = true
gleaph-auth.workspace = true
gleaph-gql = { workspace = true, features = ["f128", "f256"] }
gleaph-gql-ic.workspace = true
gleaph-gql-planner = { workspace = true, features = ["plan-wire"] }
gleaph-graph-kernel.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
candid.workspace = true
futures = "0.3"
