[package]
name = "gleaph-router"
version.workspace = true
edition.workspace = true
license.workspace = true

# Router dispatch and federation merge helpers mirror multi-shard plan contracts.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid.workspace = true
gleaph-auth.workspace = true
gleaph-gql = { workspace = true, features = ["f128", "f256"] }
gleaph-gql-ic.workspace = true
gleaph-gql-planner = { workspace = true, features = ["plan-wire"] }
gleaph-graph-kernel.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
thiserror.workspace = true
canbench-rs = { workspace = true, optional = true }

[features]
default = []
canbench = ["dep:canbench-rs"]
pocket-ic-e2e = []

[dev-dependencies]
candid.workspace = true
futures = "0.3"
