[package]
name = "gleaph-tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
gleaph-algo = { path = "../crates/algo" }
gleaph-gql = { path = "../crates/gql" }
gleaph-pma = { path = "../crates/pma" }
gleaph-types = { path = "../crates/types" }
ethnum.workspace = true
candid.workspace = true
pocket-ic = "12"
serde_cbor = "0.11"
ic-certification = "3.1"
ic-certified-map = "0.4"
ic-verify-bls-signature = "0.6"
