[package]
name = "ic-stable-bitset-canbench"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
canbench-rs.workspace = true
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-stable-bitset = { path = ".." }
ic-stable-structures.workspace = true
